Closed Bug 1641901 Opened 5 years ago Closed 5 years ago

MOZ_RELEASE_ASSERT(is<T>()) when WebSocketChannel::SendBinaryStream() is called and nsWebSocket logging is enabled

Categories

(Core :: Networking: WebSockets, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox-esr68 --- unaffected
firefox76 --- wontfix
firefox77 --- wontfix
firefox78 --- fixed

People

(Reporter: michal, Assigned: valentin)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Attachments

(1 file)

https://crash-stats.mozilla.org/report/index/debe5d95-f8f5-4b79-8931-db9180200529

Valentin, it's a regression caused by bug 1621082. Can you please have a look at it?

Flags: needinfo?(valentin.gosu)
Assignee: nobody → valentin.gosu
Severity: -- → S2
Flags: needinfo?(valentin.gosu)
Whiteboard: [necko-triaged]
Pushed by valentin.gosu@gmail.com: https://hg.mozilla.org/integration/autoland/rev/bb929caec1ab Check the type of OutboundMessage::mMsg before using r=michal,necko-reviewers
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: