Bug 1641901 - Check the type of OutboundMessage::mMsg before using r=michal,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D77546